# CRISPResso2

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CRISPResso.py  CRISPResso2_router.py  CRISPRessoAggregate.py  CRISPRessoBatch.py  CRISPRessoCompare.py  CRISPRessoMeta.py  CRISPRessoPooled.py  CRISPRessoPooledWGSCompare.py  CRISPRessoWGS.py  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  colors.json  df_alleles.txt  lambda_router.py  meta.yaml  pixi.toml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.biolib/: config.yml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/envs/: test_env.yml
.github/workflows/: aws_ecr.yml  ci.yml  integration_tests.yml  pylint.yml  pytest.yml  ruff.yml
.pi/todos/: 0526cba3.md  2152e3af.md  46493315.md  dbd4df97.md
CRISPResso/: CRISPRessoBatchCORE.py  CRISPRessoCORE.py  CRISPRessoCOREResources.pyx  CRISPRessoCompareCORE.py  CRISPRessoMultiProcessing.py  CRISPRessoPlot.py  CRISPRessoPooledCORE.py  CRISPRessoPooledWGSCompareCORE.py  CRISPRessoReport.py  CRISPRessoShared.py  CRISPRessoWGSCORE.py  README  cnwalign.pyx  setup.py  setup.sh
CRISPResso/templates/: batchReport.html  layout.html
CRISPResso2/: BLOSUM62  CRISPResso2Align.c  CRISPResso2Align.pyx  CRISPRessoAggregateCORE.py  CRISPRessoBatchCORE.old.py  CRISPRessoBatchCORE.py  CRISPRessoCORE.py  CRISPRessoCOREResources.c  CRISPRessoCOREResources.pyx  CRISPRessoCOREResources_old.pyx  CRISPRessoCORE_old.py  CRISPRessoCompareCORE.py  CRISPRessoMetaCORE.py  CRISPRessoMultiProcessing.py  CRISPRessoObjects.py  CRISPRessoPlot.py  CRISPRessoPooledCORE.py  CRISPRessoPooledWGSCompareCORE.py  CRISPRessoReport.py  CRISPRessoShared.py  CRISPRessoWGSCORE.py  __init__.py  args.json  default_style.json  filterFastqs.py  setupLocal.py  setupLocal.sh
CRISPResso2/CRISPRessoReports/: .gitattributes  CRISPRessoReport.py  README.md  jinja_partials.py
CRISPResso2/CRISPRessoReports/templates/: batchReport.html  layout.html  multiReport.html  pooledReport.html  report.html  wgsReport.html
CRISPResso2/CRISPRessoReports_mine/: CRISPRessoReport.py  README.md
CRISPResso2/CRISPRessoReports_mine/templates/: batchReport.html  layout.html  multiReport.html  pooledReport.html  wgsReport.html
CRISPResso2/plots/: CRISPRessoPlot.py  upsetplot.py
CRISPResso2/templates/: batchReport.html  layout.html  multiReport.html  report.html
CRISPResso2/writers/: vcf.py
CRISPResso_on_fneyqav1/: Alleles_frequency_table_around_sgRNA_TGCACCATGGTGTCTGTTTG.txt  Alleles_homology_scores.txt  CRISPResso_RUNNING_LOG.txt  CRISPResso_mapping_statistics.txt  CRISPResso_quantification_of_editing_frequency.txt  CRISPResso_status.json  Deletion_histogram.txt  Effect_vector_combined.txt  Effect_vector_deletion.txt  Effect_vector_deletion_noncoding.txt  Effect_vector_insertion.txt  Effect_vector_substitution.txt  Effect_vector_substitution_noncoding.txt  Frameshift_analysis.txt  Indel_histogram.txt  Insertion_histogram.txt  Modification_count_vectors.txt  Nucleotide_frequency_table.txt  Nucleotide_percentage_table.txt  Quantification_window_modification_count_vectors.txt  Quantification_window_nucleotide_frequency_table.txt  Quantification_window_nucleotide_percentage_table.txt  Splice_sites_analysis.txt  Substitution_histogram.txt
design_docs/: LEFT_NORMALIZATION.md
scripts/: Load Plots.ipynb  bench_perf.py  countHighQualityBases.py  count_sgRNA_specific_edits.py  filterReadsOnSequencePresence.py  plotAmbiguous.py  plotCustomAllelePlot.py  prepWithTrimmomaticAndFlash.py  reconstituteReads.py
tests/: Both.Cas9.fastq  Both.Cas9.fastq.hg38.bam  Both.Cas9.fastq.hg38.bam.bai  Both.Cas9.fastq.smallGenome.bam  Both.Cas9.fastq.smallGenome.bam.bai  Cas9.amplicons.txt  Cas9.regions.txt  FANC.Cas9.fastq  FANC.Untreated.fastq  FANC.batch  FANC.local.batch  HEK3.Cas9.fastq  Makefile  conftest.py  df_alleles.txt  diff.py  testRelease.sh  test_be_df.txt
tests/expectedResults/CRISPRessoBatch_on_FANC/: CRISPResso2Batch_info.json  CRISPRessoBatch_RUNNING_LOG.txt  CRISPRessoBatch_mapping_statistics.txt  CRISPRessoBatch_quantification_of_editing_frequency.txt  CRISPRessoBatch_quantification_of_frameshift_splicing.txt  CRISPResso_on_Cas9.html  CRISPResso_on_Untreated.html  MODIFICATION_FREQUENCY_SUMMARY.txt  MODIFICATION_PERCENTAGE_SUMMARY.txt  Nucleotide_frequency_summary.txt  Nucleotide_frequency_summary_around_sgRNA_GGAATCCCTTCTGCAGCACC.txt  Nucleotide_percentage_summary.txt  Nucleotide_percentage_summary_around_sgRNA_GGAATCCCTTCTGCAGCACC.txt
tests/expectedResults/CRISPRessoCompare_on_Cas9_VS_Untreated/: All_modifications_quantification.txt  Alleles_frequency_table_around_sgRNA_GGAATCCCTTCTGCAGCACC.txt  CRISPResso2Compare_info.json  CRISPRessoCompare_RUNNING_LOG.txt  Deletions_quantification.txt  Insertions_quantification.txt  Substitutions_quantification.txt
tests/expectedResults/CRISPRessoPooled_on_Both.Cas9/: AMPLICONS.fa  CRISPResso2Pooled_info.json  CRISPRessoPooled_RUNNING_LOG.txt  CRISPResso_AMPLICONS_ALIGNED.bam  CRISPResso_on_FANC.html  CRISPResso_on_HEK3.html  CUSTOM_BOWTIE2_INDEX.2.bt2  CUSTOM_BOWTIE2_INDEX.3.bt2  CUSTOM_BOWTIE2_INDEX.4.bt2  CUSTOM_BOWTIE2_INDEX.rev.2.bt2  MAPPING_STATISTICS.txt  REPORT_READS_ALIGNED_TO_AMPLICONS.txt  SAMPLES_QUANTIFICATION_SUMMARY.txt
tests/expectedResults/CRISPRessoWGS_on_Both.Cas9.fastq.smallGenome/: CRISPResso2WGS_info.json  CRISPRessoWGS_RUNNING_LOG.txt  CRISPResso_on_FANCF.html  REPORT_READS_ALIGNED_TO_SELECTED_REGIONS_WGS.txt  SAMPLES_QUANTIFICATION_SUMMARY.txt
tests/helpers/: run_crispresso.py
tests/integration/: test_bitexact_outputs.py
tests/smallGenome/: smallGenome.2.bt2  smallGenome.3.bt2  smallGenome.4.bt2  smallGenome.fa  smallGenome.fa.fai  smallGenome.rev.2.bt2
tests/unit_tests/: README.md  conftest.py  test_CRISPResso2Align.py  test_CRISPRessoBatchCORE.py  test_CRISPRessoCORE.py  test_CRISPRessoCOREResources.py  test_CRISPRessoCompareCORE.py  test_CRISPRessoMultiProcessing.py  test_CRISPRessoPlot.py  test_CRISPRessoPooledCORE.py  test_CRISPRessoShared.py  test_filterFastqs.py  test_guardrails.py
(+169 files in other folders)
